# loom

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SPEC.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
data/: customer_reviews.csv  sentiment_results.csv
docs/: ARBITER_INTEGRATION_ROADMAP.md  DESIGN_SPEC.md  IMPLEMENTATION_SPEC.md  QUALITY_GATES.md  TIMEOUTS.md
examples/: README.md  test_extract_example.py  test_retry_example.py
examples/data/: sample.csv
examples/pipelines/: customer_sentiment.yaml
loom/: __init__.py
loom/cli/: __init__.py  main.py
loom/core/: __init__.py  config.py  exceptions.py  models.py  types.py
loom/engines/: __init__.py  evaluate.py  extract.py  load.py  transform.py
loom/parsers/: __init__.py  yaml_parser.py
loom/resilience/: __init__.py  circuit_breaker.py  retry.py
loom/runner/: __init__.py  pipeline_runner.py
prompts/: classify_sentiment.txt  test.txt
tests/fixtures/data/: sample.csv  sample.json  sample.jsonl  sample.parquet
tests/fixtures/pipelines/: majority_gate_pipeline.yaml  simple_pipeline.yaml  weighted_gate_pipeline.yaml
tests/fixtures/prompts/: classify_sentiment.txt  test.txt
tests/unit/: test_circuit_breaker.py  test_core_models.py  test_evaluate_engine.py  test_extract_engine.py  test_load_engine.py  test_pipeline_runner.py  test_retry.py  test_transform_engine.py  test_yaml_parser.py
