[project]
name = "loom"
version = "0.1.0-alpha"
description = "Declarative orchestration framework for AI pipelines with built-in evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Evan Volgas", email = "evan.volgas@gmail.com"}
]
keywords = ["ai", "evaluation", "pipeline", "orchestration", "etl", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "arbiter>=0.1.0",          # Hard dependency for evaluation
    "pydantic>=2.12",          # Data validation and serialization
    "pydantic-settings>=2.0",  # Configuration management
    "click>=8.0",              # CLI framework
    "sqlalchemy>=2.0",         # ORM for storage
    "alembic>=1.13",           # Database migrations
    "asyncpg>=0.29",           # PostgreSQL async driver
    "aiosqlite>=0.20",         # SQLite async driver
    "pyyaml>=6.0",             # YAML parsing
    "jinja2>=3.0",             # Template rendering
    "httpx>=0.28",             # Async HTTP client
    "rich>=13.0",              # CLI formatting
    "structlog>=25.0",         # Structured logging
    "python-dotenv>=1.0",      # Environment variable management
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "mypy>=1.18",
    "ruff>=0.14",
    "types-pyyaml",
    "types-redis",
]

redis = [
    "redis>=5.0",              # Redis caching backend
]

all = [
    "loom[dev,redis]",
]

[project.urls]
Homepage = "https://github.com/evanvolgas/loom"
Documentation = "https://github.com/evanvolgas/loom"
Repository = "https://github.com/evanvolgas/loom"
Issues = "https://github.com/evanvolgas/loom/issues"

[project.scripts]
loom = "loom.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=loom",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["loom"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["loom"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
